Modif classes support

--- a/LogoffC/LogoffC.csproj
+++ b/LogoffC/LogoffC.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="UtilSession.cs" />
+    <Compile Include="WinExit.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
