--- a/Veilleur/Veilleur.csproj
+++ b/Veilleur/Veilleur.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5EFCCF08-64C9-4193-A998-CF26542C366E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>LogoffC</RootNamespace>
-    <AssemblyName>LogoffC</AssemblyName>
+    <RootNamespace>Veilleur</RootNamespace>
+    <AssemblyName>Veilleur</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
